aws-tf-modules/modules/eks-workers/sg.tf
 resource "aws_security_group" "node" {
   name        = "${var.cluster_name}-worker-sg"
   description = "Security group for all nodes in the cluster"
   vpc_id      = var.vpc_id

   egress {
     from_port   = 0
     to_port     = 0
     protocol    = "-1"
     cidr_blocks = ["0.0.0.0/0"]
   }

   tags = {
     Name                                        = "${var.cluster_name}-worker-sg",
     "kubernetes.io/cluster/${var.cluster_name}" = "owned"
   }
 }

 resource "aws_security_group_rule" "node_ingress_self" {
   description              = "Allow node to communicate with each other"
   from_port                = 0
   protocol                 = "-1"
   security_group_id        = aws_security_group.node.id
   source_security_group_id = aws_security_group.node.id
   to_port                  = 65535
   type                     = "ingress"
 }

 resource "aws_security_group_rule" "node_ingress_cluster" {
   description              = "Allow worker Kubelets and pods to receive communication from the cluster control plane"
   from_port                = 1025
   protocol                 = "tcp"
   security_group_id        = aws_security_group.node.id
   source_security_group_id = var.cluster_security_group_id
   to_port                  = 65535
   type                     = "ingress"
 }

 resource "aws_security_group_rule" "cluster_ingress_node_https" {
   description              = "Allow pods to communicate with the cluster API Server"
   from_port                = 443
   protocol                 = "tcp"
   security_group_id        = var.cluster_security_group_id
   source_security_group_id = aws_security_group.node.id
   to_port                  = 443
   type                     = "ingress"
 }

 resource "aws_security_group_rule" "vpn_to_nodes" {
   description       = "Allow VPN access to worker nodes"
   from_port         = 22
   to_port           = 22
   protocol          = "tcp"
   security_group_id = aws_security_group.node.id
   cidr_blocks       = var.central_vpn_cidr_blocks
   type              = "ingress"
 }
